# coreCliqueRemoval

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake
src/MClique/: CMakeLists.txt  Makefile  cmake_install.cmake  mce.h  mcecrrv3.cpp  parallelCCRMCE.cpp  parallelCCRMCE.h
src/clique/: CMakeLists.txt  Makefile  cmake_install.cmake  kCListClique.h  kCListClique_v6.cpp  parallelkCListClique.cpp  parallelkCListClique.h
src/graph/: Makefile  cmake_install.cmake  graph.cpp  graph.h
src/run/: kclistCliqueRunner.cpp  maximalCliqueLargeClique.cpp  parallelKCC.cpp  parallelMCE.cpp
src/tools/: CMakeLists.txt  Makefile  cmake_install.cmake  comb.hpp  fastIO.hpp  linearSet.hpp  listLinearHeap.hpp  types.hpp
